cleaning up a few layout issues with mobile

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2629,6 +2629,9 @@ time, sup, header h2 span, .global span, h1 span {
     font-size: 0.75em; }
     .imprint-mini .meta span {
       padding-right: 1em; }
+    @media (max-width: 30em) {
+      .imprint-mini .meta {
+        text-align: center; } }
   .imprint-mini img {
     margin: 1.4em 1.9em 4em 0;
     border-radius: 5em;
@@ -2647,7 +2650,8 @@ time, sup, header h2 span, .global span, h1 span {
     .imprint-mini a:hover {
       color: #cd2b8f; }
   .imprint-mini ul {
-    margin: 0; }
+    margin: 0;
+    padding-left: 0; }
     .imprint-mini ul li {
       display: inline;
       padding-right: 1em; }
@@ -2739,6 +2743,9 @@ time, sup, header h2 span, .global span, h1 span {
     font-size: 6em;
     margin: 0;
     font-weight: 300; }
+    @media (max-width: 30em) {
+      .imprint-full h1 {
+        font-size: 4.5em; } }
   .imprint-full .supporting {
     margin-top: 3.5em;
     padding-top: 2.5em;
@@ -2747,6 +2754,9 @@ time, sup, header h2 span, .global span, h1 span {
       font-size: 0.875em; }
   .imprint-full ul {
     margin-bottom: 4em; }
+    @media (max-width: 30em) {
+      .imprint-full ul {
+        font-size: 1.125em; } }
     .imprint-full ul li {
       font-weight: 400; }
       .imprint-full ul li:nth-child(2) {
